--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RJ de Oliveira Neto</title>
+    <title>Willian Mayrink</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -21,6 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/favicon2.ico" type="image/x-icon"/>
 </head>
 
 <body>
@@ -28,20 +29,19 @@
         <div class="container" id="nav-container">
             <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
                 <a href="#" class="navbar-brand">
-                    <img id="logo" src="img/logo.png" alt="">RJ de Oliveira
+                    <img id="logo" class="invert" src="img/logo.svg" alt="">Willian Mayrink
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-targer="#navbar-links"
                     aria-controls="navbar-links" aria-expanded="false" aria-label="toggle navigation">
                     <span class="navbar-toggler-icon">
                     </span>
                 </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+                    <div class="collapse navbar-collapse justify-content-end margin" id="navbar-links">
                         <div class="navbar-nav">
                             <a href="#" class="nav-item nav-link" id="home-menu">Home</a>
-                            <a href="#" class="nav-item nav-link" id="about-menu">Sobre nós</a>
-                            <a href="#" class="nav-item nav-link" id="products-menu">Produtos</a>
+                            <a href="#" class="nav-item nav-link" id="skills-menu">Skills</a>
+                            <a href="#" class="nav-item nav-link" id="projects-menu">Projetos</a>
                             <a href="#" class="nav-item nav-link" id="contact-menu">Contato</a>
-                            <a href="#" class="nav-item nav-link" id="history-menu">História</a>
                         </div>
                     </div>
 
